Fixed Mobile Scroll Overflow

--- a/style.css
+++ b/style.css
@@ -918,7 +918,7 @@ footer h4 {
     } */
 
     main img {
-        right: -120px;
+        right: -150px;
     }
     /* main img.invisible {
         order: 1;
